Set up surround sound filters
So much simpler

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="icon" href="upfish.svg">
   </head>
   <body>
-    <video id="video" controls autoplay src="media/HP-stereo.mp4"></video>
+    <video id="video" controls autoplay src="media/HP-surround.mp4"></video>
   </body>
   <script type="module" src="upfish.js"></script>
 </html>
