Add debug UI for time & rate
Also fix extra input sync when the main media playbackRate changes.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
   </head>
   <body>
     <video id="video" controls autoplay src="media/HP-stereo.mp4"></video>
+    <div id="time"></div>
+    <select id="playbackRate">
+      <option>2.0</option>
+      <option>1.5</option>
+      <option selected>1.0</option>
+      <option>0.5</option>
+      <option>0.25</option>
+    </select>
   </body>
   <script type="module" src="upfish.js"></script>
 </html>
