Split up UpFish module and demo main

--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
       <option>0.25</option>
     </select>
   </body>
-  <script type="module" src="upfish.js"></script>
+  <script type="module" src="main.js"></script>
 </html>
