Add more debugging to the test page
This helps when mapping out the config file

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   </head>
   <body>
     <video id="video" controls autoplay src="media/HP-stereo.mp4"></video>
-    <div id="time"></div>
-    <select id="playbackRate">
+    <div id="timeDebug"></div>
+    <div id="gainDebug"></div>
+    <select id="playbackRateControl">
       <option>2.0</option>
       <option>1.5</option>
       <option selected>1.0</option>
