Start migrating configs to storage
Now the list of available configs will be pulled from the user's account, and
will default to a built-in list when empty.  This paves the way to give users
the ability to add custom configs.

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -21,9 +21,11 @@
     <link rel="stylesheet" href="popup.css">
   </head>
   <body>
+    <!-- This "page" is recreated each time the extension is clicked.  So the
+         select element only has one option: "Off".  The others are loaded from
+         the account settings (or from defaults) and populated at runtime. -->
     <select id="upfishConfigSelection">
       <option value="">Off</option>
-      <option value="configs/WizardPeople.json">Wizard People</option>
     </select>
   </body>
   <script src="popup.js"></script>
