Lots of styling fixes
Recent popup changes were developed and tested outside the context of the
extension.  Testing more inside the extension, I found many styles needed more
work.

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -29,7 +29,9 @@
         <summary id="selectedNameElement">Off</summary>
         <div id="selectionOptions" role="listbox"></div>
       </details>
-      <button id="addButton">Add</button>
+      <div id="selectionActions">
+        <button id="addButton">Add</button>
+      </div>
     </div>
     <div id="editView">
       <form id="editForm">
