Refactor popup.js
This also gets us a little closer to passing linter checks

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -46,11 +46,11 @@
         </div>
         <div id="editActions">
           <!-- type="button" indicates not to "submit" the form" -->
-          <button id="cancelEdits" type="button">Cancel</button>
-          <button id="saveEdits">Save</button>
+          <button id="cancelEditsButton" type="button">Cancel</button>
+          <button id="saveEditsButton">Save</button>
         </div>
       </form>
     </div>
   </body>
-  <script src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </html>
