Show audio sync rate in test page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </video>
     <div id="timeDebug"></div>
     <div id="gainDebug"></div>
+    <div id="speedDebug"></div>
     <select id="playbackRateControl">
       <option>2.0</option>
       <option>1.5</option>
