--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
   </head>
   <body>
     <video id="video" controls autoplay>
-      <source type="video/mp4" src="media/HP-stereo.mp4">
+      <source type="video/mp4">
     </video>
-    <div id="timeDebug"></div>
-    <div id="gainDebug"></div>
-    <div id="speedDebug"></div>
-    <select id="playbackRateControl">
-      <option>2.0</option>
-      <option>1.5</option>
-      <option selected>1.0</option>
-      <option>0.5</option>
-      <option>0.25</option>
-    </select>
+    <div>Current media timestamp: <span id="timeDebug"></span></div>
+    <div>Current gain: <span id="gainDebug"></span></div>
+    <div>Change gain: <span id="gainChange"></span></div>
+    <div>Extra audio speed: <span id="speedDebug"></span></div>
+    <div>Playback rate:
+      <select id="playbackRateControl">
+        <option>2.0</option>
+        <option>1.5</option>
+        <option selected>1.0</option>
+        <option>0.5</option>
+        <option>0.25</option>
+      </select>
+    </div>
   </body>
   <script type="module" src="main.js"></script>
 </html>
