Improve demo page layout

--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
       <source type="video/mp4">
     </video>
     <div>Current media timestamp: <span id="timeDebug"></span></div>
-    <div>Current gain: <span id="gainDebug"></span></div>
-    <div>Change gain: <span id="gainChange"></span></div>
-    <div>Extra audio speed: <span id="speedDebug"></span></div>
-    <div>Playback rate:
+    <div>Current extra audio speed: <span id="speedDebug"></span></div>
+    <div>Change playback rate:
       <select id="playbackRateControl">
         <option>2.0</option>
         <option>1.5</option>
@@ -39,6 +37,8 @@
         <option>0.25</option>
       </select>
     </div>
+    <div>Current gain: <span id="gainDebug"></span></div>
+    <div style="display: flex;">Change gain: <span id="gainChange"></span></div>
   </body>
   <script type="module" src="main.js"></script>
 </html>
