Show input errors on the demo page

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <div>
       <label for="mediaInput">Media URL:</label>
       <input id="mediaInput" type="text">
+      <span id="mediaInputError" style="color: red; font-weight: bold;"></span>
     </div>
     <div>
       <label for="configInput">Config URL:</label>
       <input id="configInput" type="text">
+      <span id="configInputError" style="color: red; font-weight: bold;"></span>
     </div>
     <div>
       <button id="loadButton">Load</button>
