Add input to set force-surround mode in demo page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <span id="mediaInputError" style="color: red; font-weight: bold;"></span>
     </div>
     <div>
+      <label for="forceSurroundInput">Force surround sound:</label>
+      <input id="forceSurroundInput" type="checkbox">
+    </div>
+    <div>
       <label for="configInput">Config URL:</label>
       <input id="configInput" type="text">
       <span id="configInputError" style="color: red; font-weight: bold;"></span>
