Turn off autoplay in the demo page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div>
       <button id="loadButton">Load</button>
     </div>
-    <video id="video" controls autoplay>
+    <video id="video" controls>
       <source type="video/mp4">
     </video>
     <div>
