Add icon to debug page

--- a/session-counter/debug.html
+++ b/session-counter/debug.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>UpFish Session Counter Debug</title>
+    <link rel="icon" href="upfish.svg">
     <style>
       div {
         margin: 1em 0;
